# GreenHouse

./: .gitignore  CMakeLists.txt  GreenHousePC.pro  README（上位机项目）.md
include/: MyToast.h
src/: main.cpp  resources.qrc
src/common/: Protocol.h  ProtocolParser.h  appconfig.cpp  appconfig.h
src/model/: ActuatorState.cpp  ActuatorState.h  ActuatorStateData.h  SensorData.h  UserSetting.h
src/model/Database/: Database.cpp  Database.h
src/model/PersonDatabase/: CurrentUser.cpp  CurrentUser.h  Person.cpp  Person.h
src/untils/: ByteArrayUtil.h  CRC16.h  ChartManager.cpp  ChartManager.h  DeviceController.cpp  DeviceController.h  SerialConnectionManager.cpp  SerialConnectionManager.h  SettingsUtil.h  ThresholdManager.cpp  ThresholdManager.h  TimerUtil.h
src/viewmodel/: ChartViewModel.cpp  ChartViewModel.h  ControlViewModel.cpp  ControlViewModel.h  SensorViewModel.cpp  SensorViewModel.h  SerialViewModel.cpp  SerialViewModel.h  SettingViewModel.cpp  SettingViewModel.h  WebSocketViewModel.cpp  WebSocketViewModel.h
src/widget/HistoryData/: test.cpp  test.h  test.ui
src/widget/HomePage/: homepage.cpp  homepage.h  homepage.qss  homepage.ui
src/widget/Login/: login.cpp  login.h  login.ui
src/widget/MainWindow/: global.qss  mainwindow.cpp  mainwindow.h  mainwindow.qss  mainwindow.ui
src/widget/RealTimeDate/: realtimedate.cpp  realtimedate.h  realtimedate.qss  realtimedate.ui
src/widget/UserInfo/: userinfo.cpp  userinfo.h  userinfo.ui
